Changes to css Files

--- a/Style.css
+++ b/Style.css
@@ -21,8 +21,10 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
   z-index: 1000;
+  background-color: rgba(244, 230, 230, 0.088);
+  border-radius: 20px;
 }
 .logo {
   font-size: 1.5rem;
