--- a/Style.css
+++ b/Style.css
@@ -354,6 +354,12 @@
             padding-left: 10px;
         }
 
+        #education{
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect width="100" height="100" fill="white"/><path d="M0,0 L100,100 M100,0 L0,100" stroke="black" stroke-width="1" opacity="0.1"/></svg>');
+            background-size: 50px;
+        }
+           
+
         /* Footer */
         footer {
             background: var(--primary);
@@ -378,6 +384,8 @@
         .social-links a:hover {
             transform: translateY(-5px);
         }
+
+
 
         /* Animations */
         @keyframes bounce {
