--- a/Style.css
+++ b/Style.css
@@ -353,12 +353,46 @@
         .read-more:hover {
             padding-left: 10px;
         }
+        /* Education Section */
 
         #education{
             background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect width="100" height="100" fill="white"/><path d="M0,0 L100,100 M100,0 L0,100" stroke="black" stroke-width="1" opacity="0.1"/></svg>');
             background-size: 50px;
+            text-align: center;
+            position: relative;
+            font-size: 2.5rem;
+            
+            
         }
-           
+
+    .education-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
+.education-table th,
+.education-table td {
+  border: 1px solid #ddd;
+  padding: 12px;
+  text-align: left;
+}
+
+.education-table th {
+  background-color: #f3f3f3;
+  font-weight: bold;
+}
+
+.education-table tr:nth-child(even) {
+  background-color: #fafafa;
+}
+
+.education-table tr:hover {
+  background-color: #f1f1f1;
+}
+
 
         /* Footer */
         footer {
@@ -385,6 +419,8 @@
             transform: translateY(-5px);
         }
 
+
+        
 
 
         /* Animations */
