--- a/Style.css
+++ b/Style.css
@@ -300,7 +300,7 @@
             border: 3px solid var(--primary);
             border-radius: 20px;
             padding: 30px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
             box-shadow: 8px 8px 0px rgba(0, 0, 0, 0.2);
             transition: all 0.3s ease;
             position: relative;
@@ -363,6 +363,7 @@
             font-size: 2.5rem;
             
             
+            
         }
 
     .education-table {
@@ -393,7 +394,9 @@
   background-color: #f1f1f1;
 }
 
-
+ .contact-info{
+    cursor: pointer;
+ }
         /* Footer */
         footer {
             background: var(--primary);
@@ -419,6 +422,7 @@
             transform: translateY(-5px);
         }
 
+        
 
         
 
